--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>porcentaje</title>
+    <link rel="stylesheet" href="index.css">
 </head>
-<body>
-    <div class="container" >
-        <h1 class="text-center">porcentaje</h1>
-        <div class="row justify-content-center mt-3">
+<body class="color33">
+    <div class="container color31" >
+        <h1 class="text-center mb-6"> Sumar porcentaje</h1>
+        <div class="row justify-content-center mt-6">
             <label class="col-3 col-form-label"> el numero  </label>
             <div class="col-8 col-md-4">
                 <input type="number" class="form-control" id="n1">
@@ -23,11 +24,11 @@
         </div>
         <div class="row justify-content-center mt-3">
             <div class="col-8 col-md-6">
-                <button class="btn btn-success col-12" id="sumar">sumar</button>
+                <button class="btn btn-info col-12" id="sumar">sumar</button>
             </div>
         </div>
         <div class="row justify-content-center mt-5">
-            <div class="alert alert-success col-8" id="respuesta" role="alert">
+            <div class="alert alert-info col-8" id="respuesta" role="alert">
 
             </div>
         </div>
